--- a/tex/references.bib
+++ b/tex/references.bib
@@ -5,6 +5,15 @@
   organization = {University of Leeds},
   note = {PhD thesis},
 } 
+@article{CederbaumEtAl2016,
+  author = {Cederbaum, J. and Pouplier, M. and Hoole, P. and Greven, S.},
+  title ={Functional linear mixed models for irregularly or sparsely sampled data},
+  journal = {Statistical Modelling},
+  volume = {16},
+  number = {1},
+  pages = {67-88},
+  year = {2016}
+}
 @article{CederbaumScheiplGreven2018,
   author = {J. {Cederbaum} and F. {Scheipl} and S. {Greven}},
   title = {Fast Symmetric Additive Covariance Smoothing},
@@ -12,6 +21,15 @@
   journal = {Computational Statistics \& Data Analysis},
   volume = 120,
   pages = {25--41},
+}
+@article{Davidson2006,
+  author = {Davidson, L.},
+  title = {Comparing tongue shapes from ultrasound imaging using smoothing spline analysis of variance},
+  journal = {The Journal of the Acoustical Society of America},
+  volume = {120},
+  number = {1},
+  pages = {407-415},
+  year = {2006}
 }
 @book{DrydenMardia2016,
   author = {I. L. {Dryden} and K. V. {Mardia}},
@@ -57,6 +75,14 @@
     number={3}, 
     publisher={Cambridge University Press}, 
     pages={428–430}
+}
+@Inbook{PouplierEtAl2014,
+  author = {Pouplier, M. and Hoole, P. and Cederbaum, J. and Greven, S. and Pastätter, M.}, 
+  title = {Perceptual and articulatory factors in German fricative assimilation},
+  editor = {Fuchs, S. and Grice, M. and Hermes, A. and Lancia, L. and Mücke, D.},
+  booktitle = {Proceedings of the 10th International Seminar on Speech Production (ISSP)},
+  year = {2014},
+  pages = {332–335}
 }
 @Book{RamsaySilverman2005,
   author       = {Ramsay, J. and Silverman, B. W.},
@@ -115,7 +141,7 @@
 @Misc{Stoecker2021,
   author = {Stöcker, A. and Greven, S.},
   title = {Functional additive regression on shape and form manifolds of planar curves},
-  year = 2021,
+  year = {2021},
   eprint={2109.02624},
   archivePrefix={arXiv},
   primaryClass={stat.ME}
@@ -136,12 +162,21 @@
   edition = {2},
   publisher = {Chapman and Hall/CRC},
 }
+@Article{YaoMuellerWang2005,
+  author = {Yao, F. and Müller, H.-G. and Wang, J.-L.},
+  title = {Functional Data Analysis for Sparse Longitudinal Data},
+  journal = {Journal of the American Statistical Association},
+  volume = {100},
+  number = {470},
+  pages = {577-590},
+  year  = {2005}
+}
 @Manual{consulting,
   title = {Analyse von Zungenkonturen zur Untersuchung der Konsonantenanpassung an den Vokalkontext},
   author = {Le, L. and Szydlo, M.},
   year = {2015},
   organization = {Ludwig-Maximilians-Universität München},
-  note = {Projektbericht Statistisches Consulting}
+  note = {Projektbericht}
 }
 @Manual{elasdics,
   title = {elasdics: Elastic Analysis of Sparse, Dense and Irregular Curves},
