--- a/tex/report.tex
+++ b/tex/report.tex
@@ -213,7 +213,7 @@
 % ---- References ---
 
 \newpage
-\nocite{*}
+%\nocite{*}
 \printbibliography[heading=bibintoc] % Insert bibliography and create toc entry
 
 
