--- a/tex/sections/3-estimation.tex
+++ b/tex/sections/3-estimation.tex
@@ -81,7 +81,7 @@ Note that this does not change the normalisation as re-parametrization is norm-p
 \section{Efficient Estimation using Hermitian Covariance Smoothing}
 \label{sec:3-cov}
 Given approximate observations of the warped normalised SRV curves $\widetilde q^{(k)}_i(s_{ij})$ for $j = 1,\dots,n_i-1$ and $i=1,\dots,N$, where $n_i$ denotes the number of observed points per curve, we want to estimate the warping aligned complex covariance surface $C^{(k)}(s,t) = \mathbb{E}[\widetilde q^{(k)}(s)\overline{\widetilde q^{(k)}(t)}]$.
-We can treat this estimation as a smoothing problem\todo{Cov smoothing citations}, by constructing responses $y^{(k)}_{ilm} = \widetilde q^{(k)}_i(s_{il}) \overline{\widetilde q^{(k)}_i(s_{im})}$ and treating the pairs $s_{il}$, $s_{im}$ as covariates $s$ and $t$.
+We can treat this estimation as a smoothing problem, by constructing responses $y^{(k)}_{ilm} = \widetilde q^{(k)}_i(s_{il}) \overline{\widetilde q^{(k)}_i(s_{im})}$ and treating the pairs $s_{il}$, $s_{im}$ as covariates $s$ and $t$ \parencite[see][]{YaoMuellerWang2005}.
 Smoothing the responses $y^{(k)}_{ilm}$ gives an estimate $\hat C^{(k)}(s,t)$ of $C^{(k)}(s,t)$, as each response has expectation $\mathbb{E}[y^{(k)}_{ilm}|s_{il},s_{im}] = C^{(k)}(s_{il},s_{im})$. 
 We carry out the smoothing in a flexible \emph{penalised tensor product spline} basis 
 \begin{equation}
