--- a/tex/sections/4-application.tex
+++ b/tex/sections/4-application.tex
@@ -1,9 +1,9 @@
 \label{sec:4}
 In this chapter the proposed methods will be applied and verified.
 \cref{sec:4-means} offers a comparison between the elastic full Procrustes mean, the elastic mean and the full Procrustes mean over two datasets, with the goal of illustrating some properties of the elastic full Procrustes mean.
-\cref{sec:4-penalty} will briefly discuss the effect of the penalty parameter on the estimation.
-\cref{sec:4-pfits} discusses \todo{Anpassen}\dots .
-Finally, \cref{sec:4-tounges} applies the proposed methods to an empirical dataset of tongue shapes, which was kindly provided by \todo{Phonetics Data Citations}\dots.
+\cref{sec:4-penalty} briefly discusses the effect of the penalty parameter on the estimation.
+\cref{sec:4-pfits} mentions pitfalls when comparing the mean to the elastic full Procrustes fits and discusses outliers.
+Finally, \cref{sec:4-tounges} applies the proposed methods to an empirical dataset of tongue contours, which was kindly provided by Prof.\ Dr.\ Marianne \textsc{Pouplier}.
 
 
 \section{Comparison to the Elastic and the Full Procrustes Mean}
@@ -53,7 +53,7 @@ The four sets of data curves and means, are show in \cref{fig:4-means}.
 \end{figure}
 Here, the elastic mean (blue) is estimated using \texttt{compute\_elastic\_mean} from the \texttt{elasdics} package.
 The full Procrustes (green) and the elastic full Procrustes mean (red) are estimated using the methods proposed in \cref{sec:2,sec:3}, where for the full Procrustes mean the estimation is stopped before the warping alignment step during the first iteration.
-Note that the full Procrustes mean calculated in this way is not exactly\todo{Vielleicht sogar doch "exactly?"} a minimizer of the sum of squared full Procrustes distance defined in \cref{def:2-fpdist}, but instead is a minimizer of the sum of squared full Procrustes distances on SRV level.
+Note that the full Procrustes mean calculated in this way is not exactly a minimizer of the sum of squared full Procrustes distance defined in \cref{def:2-fpdist}, but instead is a minimizer of the sum of squared full Procrustes distances on SRV level.
 When comparing the different mean types in \cref{fig:4-means} we can see that, unlike the elastic mean, both Procrustes means are invariant with respect to all Euclidean similarity transforms, as the estimated mean is the same for the transformed and original datasets.
 However for this very same reason, both Procrustes means hold no information about the scale or rotation of the original curves, as they are of unit-length and have a rotation dependent on the eigendecomposition of the covariance surface.
 The elastic mean is invariant only with respect to re-parametrization and translation, so that its scale and rotation match the original data curves.
@@ -106,7 +106,7 @@ The order two mean (right) is slightly longer towards the end, indicating a spee
 \label{sec:4-pfits}
 Although the elastic full Procrustes mean does not share the rotation, scale and translation of the input curves, it is still possible to visually compare it to them, by plotting the mean together with the elastic full Procrustes fits.
 In this thesis, the elastic full Procrustes fits are calculated on SRV level as $\widetilde q^\mathrm{EP} = (\omega^\mathrm{opt}\cdot \widetilde q \circ \gamma^\mathrm{opt} ) \sqrt{\dot\gamma^\mathrm{opt}}$, where the optimal rotation and scaling alignment $\omega^\mathrm{opt} = \lambda^\mathrm{opt} e^{\iu \theta^\mathrm{opt}}$ and optimal warping alignment $\gamma^\mathrm{opt}$ of each curve to the mean are taken from the last iteration of the mean estimation step.
-In \cref{fig:4-pfits} the elastic full Procrustes mean and fits are plotted for the digits \enquote*{3} and simulated spiral datasets discussed in \cref{sec:4-means}, with random Euclidean similarity transforms applied to each curve.
+In \cref{fig:4-pfits-curve} the elastic full Procrustes mean and fits are plotted for the digits \enquote*{3} and simulated spiral datasets discussed in \cref{sec:4-means}, with random Euclidean similarity transforms applied to each curve.
 \begin{figure}
   \centering
   \begin{subfigure}{\textwidth}
@@ -117,7 +117,7 @@ In \cref{fig:4-pfits} the elastic full Procrustes mean and fits are plotted for 
       \inputTikz{4-spirals-pfits}
     \end{subfigure}
     \caption{Centred elastic full Procrustes fits (grey) and smooth means (red).}
-    \label{fig:4-pfits}
+    \label{fig:4-pfits-curve}
   \end{subfigure}
   \begin{subfigure}{\textwidth}
     \begin{subfigure}{0.48\textwidth}
@@ -130,51 +130,46 @@ In \cref{fig:4-pfits} the elastic full Procrustes mean and fits are plotted for 
     \label{fig:4-pfits-srv}
   \end{subfigure}
   \caption{Elastic full Procrustes means and fits for digits (left) and spirals (right). Parameters: Second order penalty and linear B-splines, with 13 (left) and 19 (right) equidistant knots. Data: See \cref{fig:41-digit3-means-b,fig:41-spiral-means-b}}
+  \label{fig:4-pfits}
 \end{figure}
 This alignment works very well for the simulated spirals and is more fuzzy for the digits, due to their greater variability in shape. 
+
 In general, one has to be careful when interpreting these plots.
 For example, it can be seen that the estimated mean does not necessarily follow the \enquote{centre of mass} of the aligned curves. 
 One reason for this is that the mean is calculated on SRV level, meaning we may set an arbitrary translation for the mean on data curve level.
 Here, the Procrustes fits and the mean function are centred, but a natural alternative might be to have all curves start at the origin, with both choices leading to very different, but equally valid, visual representations.
-On SRV level, displayed in \cref{fig:4-pfits-srv}, it should also be taken into account that the mean is calculated from a smooth covariance surface, which was estimated using a roughness penalty where the SRV curves were evaluated at the centre of the observed corners (see \cref{sec:3-cov}).
+On SRV level, displayed in \cref{fig:4-pfits-srv}, it should also be taken into account that the mean is calculated from a smooth covariance surface, which was estimated using a roughness penalty where the SRV curves were assumed to be observed at the centre between the original curves observed corners (see \cref{sec:3-cov}).
 On the other hand, the optimal rotation and scaling alignment was calculated by treating the normalised SRV curves as piece-wise-constant (see \cref{sec:3-pfits}).
 It follows that the estimated mean on SRV level is also not necessarily the functional mean of the elastic full Procrustes fits.
-This mismatch in estimation strategies might be a possible avenue of further research, and could be addressed by incorporating some form of smoothing into the estimation of the elastic full Procrustes fits, such as the curve smoothing proposed in \cref{app:a-smooth}.
+This mismatch in estimation strategies might be a possible avenue of further research, and could be addressed by incorporating some form of smoothing into the estimation of the elastic full Procrustes fits, such as a variation of the curve smoothing proposed in \cref{app:a-smooth}.
 
-See Figure \cref{fig:4-outliers} \dots \todo{Outlier diskutieren}
-Außerdem sind die Procrustes Fits auch ein Punkt bei der MA, wo am ehesten etwas schieflaufen kann.
-Manche "Outlier Kurven" werden ja sehr schlecht dran-rotiert und dann auch recht klein. 
-As can be seen in \cref{fig:4-outliers}.
-Das kann natürlich Konsequenzen für das Warping-Alignment haben, dass sich dann nicht anpassen kann oder sogar schlechter wird.
-Es kann also passieren, dass diese Kurven nie gut dran rotiert und einfach klein werden \dots
-Bin mir noch nicht sicher, ob ich das als Bug oder Feature der Methode sehen soll.
-Die Means sehen am Ende ja trotzdem sehr gut aus (oder gerade deswegen? 
-Der full Procrustes Mean ist ja angeblich am "robustesten" unter den Procrustes Means). 
-Vielleicht gibt es für diese Kurven einfach kein gutes Alignment.
-Anhand des Kapitels kann man schön verdeutlichen, wo man wahrscheinlich noch etwas verbessern kann (z.B. mit dem von dir vorgeschlagenen Glätten der beobachteten Kurven mit Hilfe der geschätzten Kovarianz). 
+Because of the great variation in '3' shapes in the \texttt{digits3.dat} dataset, there are some curves that cannot be properly aligned.
+Four outlier shapes are shown in \cref{fig:4-outliers}, which were classified using their distance to the mean. 
 \begin{figure}
   \centering
-  \begin{subfigure}{0.24\textwidth}
+  \begin{subfigure}{0.40\textwidth}
+    \centering
     \inputTikz{4-outlier-dist}
-  \end{subfigure}
-  \begin{subfigure}{0.24\textwidth}
-    \inputTikz{4-outlier-bopt}
   \end{subfigure}
   \begin{subfigure}{0.48\textwidth}
     \centering
     \inputTikz{4-outlier}
   \end{subfigure}
   \caption{Left: Distribution of each curves elastic full Procrustes distance to the estimated mean.
-  Centre-left: Distribution of the scaling parameter of each elastic Procrustes fit onto the estimated mean.
-  Right: Four largest outliers (grey) with respect to their distance to the estimated mean (red) for the \texttt{digits3.dat} dataset.
+  %Centre-left: Distribution of the scaling parameter of each elastic Procrustes fit onto the estimated mean.
+  Right: Four largest outliers (grey) with respect to their distance to the estimated mean (red).
   Parameters: See \cref{fig:4-pfits}. 
   Data: See \cref{fig:41-digit3-means-b,fig:41-spiral-means-b}}
   \label{fig:4-outliers}
 \end{figure}
-See also \cref{app:a-warping}.
+One prominent feature of the full Procrustes mean is its relative robustness to outliers, when compared to the normal and partial Procrustes means.
+This comes from the additional scaling alignment, which allows for shrinkage of any outlier curve towards zero, which can be seen for curves $1$ and $4$ in \cref{fig:4-outliers} (right).
+Because the warping alignment is performed between the elastic full Procrustes fit and the mean curve, it might be important to better understand how it is affected by bad rotation and scaling alignment.
+While a bad scaling alignment does not seem to be immediately problematic, as the warping alignment only takes into account the \emph{relative} distances over $t$ between the aligned and the mean curve, a bad rotation alignment will most likely always lead to a bad warping alignment.
+However, because of the discussed shrinkage, these outliers are only problematic when considering the alignment of single curves and do not have a strong influence on the estimated means shape when their number is small.
 
 
-\section{Analysis of Tongue Shape Variability}
+\section{Analysis of Variations in Tongue Shapes}
 \label{sec:4-tounges}
 Mean and distance estimation for planar shapes extracted from imagery is a typical use-case for the proposed methods.
 In this section a dataset consisting of tongue contours obtained from ultrasound recordings and their phonetic context is analysed.
@@ -182,7 +177,7 @@ The data was kindly provided by Prof.\ Dr.\ Marianne \textsc{Pouplier} and was g
 Each word is a combination of two flanking vowels such as 'aa' or 'ii' and one consonant such as 'd' or 'l', leading to words such as 'pada', 'pidi', 'pala' or 'pili'.
 The tongue contours follow the centre of the tongue and are extracted from the ultrasound recordings at times corresponding to the centre of consonant articulation, which is estimated from the acoustic signal.
 Furthermore, care was taken to observe the tongues over their full length, from their tips to the Hoyid bone (German: Zungenbein),  which means we can naturally treat them as planar curves $\beta : [0,1] \rightarrow \mathbb{C}$ \parencite[see][]{consulting}.
-While there is earlier work on functional data approaches to tongue shape analysis \todo{Cite}, these approaches did not account for shape invariance in their estimation and are mostly focused on regression based approaches.
+While there is earlier work on functional data approaches to tongue shape analysis \parencite{CederbaumEtAl2016,Davidson2006,PouplierEtAl2014}, these approaches do not account for shape invariance in their estimation.
 Procrustes analysis can account for anatomical differences between speakers, such as their differing sizes, or measurement inconsistencies between iterations, such as differences in orientation of the ultrasound device.
 At the same time, the tongue is a flexible muscle capable of stretching, bending and compressing itself, providing some indication that an elastic analysis is appropriate. 
 Therefore, the tongue shapes will be analysed using the elastic full Procrustes mean and distance.
@@ -217,7 +212,7 @@ The results can be seen in \cref{fig:4-tounges}.
     \label{fig:4-tongue-dists}
   \end{subfigure}
   \caption{Right column and bottom row correspond to means and distances over all vowels or all consonants respectively, with the bottom right means corresponding to global and global per-speaker means and distances.
-    Data: Provided by Prof.\ Dr.\ M.\ \textsc{Pouplier}.}
+    Data: Prof.\ Dr.\ M.\ \textsc{Pouplier}.}
   \label{fig:4-tounges}
 \end{figure}
 The box plots in \cref{fig:4-tongue-dists} show the distributions of the elastic full Procrustes fits' distances to their  mean in \cref{fig:4-tongue-means}.
@@ -228,3 +223,4 @@ When performing the same comparison over the per-speaker means, we can see that 
 Taken together, this could indicate that there is no common effect of the spoken consonant on tongue shape over all speakers, but rather that this effect depends on each speaker individually.
 Finally, the smallest variability is measured over the per-speaker means for repetitions of the same word (central eight plots), indicating that tongue shape is very consistent on a per-speaker basis.
 
+\todo[inline]{One paragraph for possible future extensions.}
