--- a/tex/report.tex
+++ b/tex/report.tex
@@ -66,6 +66,12 @@
 
 % Hyperrefs - should be imported after all other packages as it changes a lot
 \usepackage[hidelinks]{hyperref}
+\hypersetup{
+  pdftitle={Elastic Full Procrustes Means for Sparse and Irregular Planar Curves},
+  pdfsubject={Masters Thesis},
+  pdfauthor={Manuel Pfeuffer},
+  pdfkeywords={Functional Data} {Shape} {Procrustes} {Elastic} {Sparse} {Curves}
+}
 \usepackage[capitalise]{cleveref}  % Full references ("Fig. X")
 
 %% Settings
