--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -75,7 +75,7 @@ Man kann das glaube ich auch umschreiben mit $\breve z_1 = (z_1 \circ \gamma^{-1
 \section{Analysis of Tounge Shape Variability using Procrustes Residuals}
 \begin{itemize}
   \item Want investiage how the effect of the flanking vowels \enquote*{aa} and \enquote*{ii} on tounge shape differs for the consonants 'd', 'l', 'n' and 's', while controlling for variability over six speakers and 5--7 repetitions of the same word per speaker.
-  \item Analysis should be invariant with respect to size, rotation, translation and parametrization of the tounges.
+  \item Analysis should be invariant with respect to size, rotation, translation and parameterisation of the tounges.
     This can e.g.\ account for anatomical differences between speakers, or inaccuracies in the measurement process.
   \item \textbf{Idea:} Estimate a global mean function $q_0(t)$ from all curves and calculate the elastic full Procrustes residuals.
     They are given by the difference of elastic full Procrustes fits and the mean function on SRV level
